--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_ui_oauth_twitter: ^1.0.6
   flutter:
     sdk: flutter
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -63,7 +65,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
