--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,4 +70,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // implementation 'com.google.firebase:firebase-appcheck-debug:16.1.1'
 }
