--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.2
   firebase_analytics: ^10.0.5
-  firebase_app_check: ^0.1.1+4
+  firebase_app_check: ^0.1.1+8
   firebase_auth: ^4.1.2
-  firebase_core: ^2.2.0
+  firebase_core: ^2.4.1
   firebase_database: ^10.0.5
   firebase_dynamic_links: ^5.0.5
   firebase_messaging: ^14.1.0
@@ -45,8 +46,10 @@ dependencies:
   firebase_ui_oauth_twitter: ^1.0.6
   flutter:
     sdk: flutter
+  google_fonts: ^4.0.3
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
